# numbagg

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README.rst  _typos.toml  asv.conf.json  benchmark-output.md  conftest.py  pyproject.toml  setup.cfg  setup.py  stubtest_allowlist.txt
.claude/skills/running-tend/: SKILL.md
.config/: tend.toml  tend.yaml
.github/: dependabot.yml
.github/workflows/: ci-pre-commit.yml  ci.yaml  pypi-release.yaml  tend-ci-fix.yaml  tend-mention.yaml  tend-nightly.yaml  tend-notifications.yaml  tend-renovate.yaml  tend-review-runs.yaml  tend-review.yaml  tend-triage.yaml  tend-weekly.yaml  test.yaml
benchmarks/: benchmarks.py
numbagg/: __init__.py  cache.py  decorators.py  funcs.py  funcs.pyi  grouped.py  moving.py  moving.pyi  moving_exp.py  moving_exp.pyi  moving_matrix.py  tests.py  transform.py  utils.py
numbagg/test/: __init__.py  conftest.py  run_benchmarks.py  test_axis_ordering_benchmark.py  test_benchmark.py  test_cache_segfault.py  test_funcs.py  test_grouped.py  test_matrix_functions.py  test_move_exp_matrix.py  test_move_exp_matrix_advanced.py  test_move_exp_matrix_consistency.py  test_moving.py  test_moving_exp.py  test_multithreading.py  test_nancorrmatrix.py  test_nancovmatrix.py  test_property.py  test_threading_detection.py  test_utils.py  util.py
